--- a/index.html
+++ b/index.html
@@ -21,13 +21,20 @@
                         <a href="#"><img src='./img/twitBlu.png' /></a>
                     </li>
                     <li class="searchBox">
-                        <input type="text" class="form-control" placeholder="Search Twitter"><button type="button" class="btn btn-primary search-btn"><i class="fa fa-search"></i></button>
+                        <input type="text" class="form-control" placeholder="Search Twitter">
+                        <button type="button" class="btn btn-primary search-btn"><i class="fa fa-search"></i></button>
                     </li>
                     <li><i class="fa fa-pencil"></i></li>
                 </ul>
             </div>
         </div>
     </nav>
+    <div class='container-fluid'>
+        <div class='col-md-4'>
+            <div class='mainBoxes infoBox'>Info box</div>
+        </div>
+        <div class='col-md-6 mainBoxes'>Tweet feed</div>
+    </div>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js'></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
